--- a/index.html
+++ b/index.html
@@ -1,7 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="mysite.css">
 </head>
+
 <body>
+
+<div class="sidebar">
+    <div class="home"<a href="https://en.wikipedia.org/wiki/Main_Page"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png" alt="home"></a>
+    </div>
+	<div class="block">
+		<ul>
+			<li>Main page</li>
+			<li>Contents</li>
+			<li>Featured content</li>
+			<li>Current events</li>
+			<li>Random article</li>
+			<li>Donate to Wikipedia</li>
+			<li>Wikipedia store</li>
+    </div>
+
+	<div class="block">
+	 	<div class="body">
+			<h4>Interaction</h4>
+			<ul>
+				<li>Help</li>
+				<li>About Wikipedia</li>
+				<li>Community portal</li>
+				<li>Recent changes</li>
+				<li>Contact page</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="block"> 
+		<div class="body">
+		<h4>Tools</h4>
+			<ul>
+				<li>What links here</li>
+				<li>Related Changes</li>
+				<li>Upload file</li>
+				<li>Special pages</li>
+				<li>Permanent link</li>
+				<li>Page information</li>
+				<li>Wikidata item</li>
+				<li>Cite this page</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="block">
+		<div class="body">
+		<h4>Print/export</h4>
+			<ul>
+				<li>Create a book</li>
+				<li>Download as PDF</li>
+				<li>Printable version</li>
+			</ul>
+		</div> 
+	</div>
+
+	<div class="block">
+		<div class="body">
+			<ul>
+			<h4>In other projects</h4>
+				<li>Wikimedia Commons</li>
+			</ul>
+		</div>	
+	</div>
+
+	<div class="block">
+		<div class="body">
+		<h4>Languages</h4>
+			<ul>
+				<li>Bosanski</li>
+				<li>Čeština</li>
+		</div>
+	 </div>
+</div>
+
+<div class="content">
+<h1>padasdasdasdasdasdasdasda</h1>
+</div>
+	
 </body>
+
+
 </html>
