Добавив ссилки,застряг на тейблах і верхньому меню :/

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     </div>
 	<div class="block">
 		<ul>
-			<li>Main page</li>
-			<li>Contents</li>
-			<li>Featured content</li>
-			<li>Current events</li>
-			<li>Random article</li>
-			<li>Donate to Wikipedia</li>
-			<li>Wikipedia store</li>
+			<li><a href="#">Main page</a></li>
+			<li><a href="#">Contents</a></li>
+			<li><a href="#">Featured content</a></li>
+			<li><a href="#">Current events</a></li>
+			<li><a href="#">Random article</a></li>
+			<li><a href="#">Donate to Wikipedia</a></li>
+			<li><a href="#">Wikipedia store</a></li>
     </div>
 
 	<div class="block">
 	 	<div class="body">
 			<h4>Interaction</h4>
 			<ul>
-				<li>Help</li>
-				<li>About Wikipedia</li>
-				<li>Community portal</li>
-				<li>Recent changes</li>
-				<li>Contact page</li>
+				<li><a href="#">Help</a></li>
+				<li><a href="#">About Wikipedia</a></li>
+				<li><a href="#">Community portal</a></li>
+				<li><a href="#">Recent changes</a></li>
+				<li><a href="#">Contact page</a></li>
 			</ul>
 		</div>
 	</div>
@@ -37,14 +37,14 @@
 		<div class="body">
 		<h4>Tools</h4>
 			<ul>
-				<li>What links here</li>
-				<li>Related Changes</li>
-				<li>Upload file</li>
-				<li>Special pages</li>
-				<li>Permanent link</li>
-				<li>Page information</li>
-				<li>Wikidata item</li>
-				<li>Cite this page</li>
+				<li><a href="#">What links here</a></li>
+				<li><a href="#">Related Changes</a></li>
+				<li><a href="#">Upload file</a></li>
+				<li><a href="#">Special pages</a></li>
+				<li><a href="#">Permanent link</a></li>
+				<li><a href="#">Page information</a></li>
+				<li><a href="#">Wikidata item</a></li>
+				<li><a href="#">Cite this page</a></li>
 			</ul>
 		</div>
 	</div>
@@ -53,18 +53,18 @@
 		<div class="body">
 		<h4>Print/export</h4>
 			<ul>
-				<li>Create a book</li>
-				<li>Download as PDF</li>
-				<li>Printable version</li>
+				<li><a href="#">Create a book</a></li>
+				<li><a href="#">Download as PDF</a></li>
+				<li><a href="#">Printable version</a></li>
 			</ul>
 		</div> 
 	</div>
 
 	<div class="block">
 		<div class="body">
-			<ul>
 			<h4>In other projects</h4>
-				<li>Wikimedia Commons</li>
+			<ul>
+				<li><a href="#">Wikimedia Commons</a></li>
 			</ul>
 		</div>	
 	</div>
@@ -73,14 +73,78 @@
 		<div class="body">
 		<h4>Languages</h4>
 			<ul>
-				<li>Bosanski</li>
-				<li>Čeština</li>
+				<li><a href="#">Bosanski</a></li>
+				<li><a href="#">Čeština</a></li>
 		</div>
 	 </div>
 </div>
 
 <div class="content">
-<h1>padasdasdasdasdasdasdasda</h1>
+	<div class="client">
+		<ul>
+			<li><img widht="12" height="13" src="https://en.wikipedia.org/w/skins/Vector/images/user-icon.png?13155" alt="user"></li>
+			<li class="user">Not logged in</li>
+			<li><a href="#">Talk</a></li>
+			<li><a href="#">Contributions</a></li>
+			<li><a href="#">Create account</a></li>
+			<li><a href="#">Log in</a></li>
+	</div>
+
+	<div class="leftnav">
+		<ul>
+			<li class="article">Article</li>
+			<li class="talk">Talk</li>
+		</ul>
+	</div>
+
+	<div class="container">
+		<h1>BMW <sub>3</sub> Series (E46)</h1>
+		<h4>From Wikipedia, the free encyclopedia</h4>
+	
+
+		<div class="container-text">
+
+			<h4>For a complete overview of all the 3 series chassis, see <a href="#">BMW 3 Series</a>.</h4>
+			<table align="right">
+				<tr>
+					<th style="background-color: #C0C0C0;font-size:20px;">BMW 3-Series (E46)</th>
+				</tr>
+
+				<tr>
+					<td style="text-align: center;font-size:14px">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG/280px-BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG" alt="bmwE46">Pre-facelift BMW 3 Series (E46) sedan</td>
+				</tr>
+
+				<tr>
+					<th style="background-color: #C0C0C0;text-align: center;">Overview</th>
+				</tr>
+
+				
+			</table>
+			<p>The <strong>BMW E46</strong> is a <a href="#">compact executive car</a> which was produced by <a href="#">BMW</a> from 1998 to 2007. It was introduced in May 1998 in the <a href="#">sedan</a> body style. In 1999, a <a href="#">coupe</a> and <a href="#">touring</a> body style became available to all markets, and the sedan was released in the United States. A <a href="#">convertible</a> and <a href="#">hatchback</a> body style was released in 2000, the latter only for Europe, South Africa, Australia and New Zealand. The <a href="#">BMW E90</a> replaced the E46 sedans in late 2004, however the E46 coupe and convertible body styles remained in production until 2007.</p>
+
+			<p>All-wheel drive ("<a href="#">xDrive</a>") was re-introduced in the 3 Series, after a break of 18 years. It was available for the six-cylinder 325xi and 330xi sedan/wagon models.</p>
+			<p>The E46 was considered the performance benchmark of its class and experienced success in many markets. The record selling year for the E46 chassis was 2002, when 561,249 vehicles were sold worldwide.The main competitors during the E46's production run were the <a href="#">Alfa Romeo 156</a>, <a href="#">Audi A4</a>, <a href="#">Lexus IS</a>/<a href="#">Toyota Altezza</a>, <a href="#">Mercedes-Benz C-Class</a>, <a href="#">Saab 9-3</a> and the <a href="#">Volvo S60</a>.</p>
+
+			<p>The <a href="#">M3</a> version of the E46 was powered by the <a href="#">BMW S54</a> straight-six engine. The M3 was released in 2001 and was available in coupé and convertible body styles. The transmissions available were a 6-speed manual or the 6-speed "SMG-II" <a href="#">sequential manual gearbox</a>.</p>
+			<ol class="topic">
+				<li>Contents</li>
+					<ol>
+						<li>Exterior design</li>
+						<li>Interior design</li>
+						<li>Weigth and rigdity goals</li>
+						<li>E46/5 hatchback</li>
+					</ol>
+				<li>SULEV</li>
+				<li>Specifications</li>
+			</ol>
+		</div>
+	
+
+	</div>
+
+	
+
 </div>
 	
 </body>
