--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 			<ul>
 				<li><a href="#">Bosanski</a></li>
 				<li><a href="#">Čeština</a></li>
+				<li><a href="#">Dansk</a></li>
+				<li><a href="#">Eesti</a></li>
+				<li><a href="#">Espanol</a></li>
+				<li><a href="#">Italiano</a></li>
+				<li><a href="#">Svenska</a></li>
 		</div>
 	 </div>
 </div>
@@ -88,14 +93,26 @@
 			<li><a href="#">Contributions</a></li>
 			<li><a href="#">Create account</a></li>
 			<li><a href="#">Log in</a></li>
+		</ul>
 	</div>
 
 	<div class="leftnav">
 		<ul>
-			<li class="article">Article</li>
-			<li class="talk">Talk</li>
+			<a href ="#"><li>Article</li></a>
+			<a href ="#"><li>Talk</li></a>
 		</ul>
 	</div>
+	<div class="rightnav">
+		<ul>
+			<a href ="#"><li>Read</li></a>
+			<a href ="#"><li>Edit</li></a>
+			<a href ="#"><li>View history</li></a>
+			<a href ="#"><li class="search"><input type="search" name="googlesearch" size="40" placeholder="Search"></li></a>
+		</ul>
+
+	</div>
+	<br>
+	
 
 	<div class="container">
 		<h1>BMW <sub>3</sub> Series (E46)</h1>
@@ -109,15 +126,16 @@
 				<tr>
 					<th style="background-color: #C0C0C0;font-size:20px;">BMW 3-Series (E46)</th>
 				</tr>
-
 				<tr>
 					<td style="text-align: center;font-size:14px">
 						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG/280px-BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG" alt="bmwE46">Pre-facelift BMW 3 Series (E46) sedan</td>
 				</tr>
-
 				<tr>
 					<th style="background-color: #C0C0C0;text-align: center;">Overview</th>
 				</tr>
+				<tr>
+				 	<td>Manufacturer</td>
+
 
 				
 			</table>
@@ -127,24 +145,34 @@
 			<p>The E46 was considered the performance benchmark of its class and experienced success in many markets. The record selling year for the E46 chassis was 2002, when 561,249 vehicles were sold worldwide.The main competitors during the E46's production run were the <a href="#">Alfa Romeo 156</a>, <a href="#">Audi A4</a>, <a href="#">Lexus IS</a>/<a href="#">Toyota Altezza</a>, <a href="#">Mercedes-Benz C-Class</a>, <a href="#">Saab 9-3</a> and the <a href="#">Volvo S60</a>.</p>
 
 			<p>The <a href="#">M3</a> version of the E46 was powered by the <a href="#">BMW S54</a> straight-six engine. The M3 was released in 2001 and was available in coupé and convertible body styles. The transmissions available were a 6-speed manual or the 6-speed "SMG-II" <a href="#">sequential manual gearbox</a>.</p>
-			<ol class="topic">
-				<li>Contents</li>
-					<ol>
-						<li>Exterior design</li>
-						<li>Interior design</li>
-						<li>Weigth and rigdity goals</li>
-						<li>E46/5 hatchback</li>
-					</ol>
-				<li>SULEV</li>
-				<li>Specifications</li>
-			</ol>
+			<div class="topic">	
+				<ol>
+					<h4>Contents <span>[<a href="#">hide</a>]</span></h4>
+					<li>Design</li>	
+						<ul>
+							<li><span>1.1</span> Exterior design</li>
+							<li><span>1.2</span> Interior design</li>
+							<li><span>1.3</span> Weigth and rigdity goals</li>
+							<li><span>1.4</span> E46/5 hatchback</li>
+						</ul>
+					<li>SULEV</li>
+					<li>Specifications</li>
+					<li>Performance package(ZHP)</li>
+					<li>M3</li>
+					<li>Motorsport</li>
+					<li>Gallery</li>
+					<li>References</li>
+					<li>External links</li>
+				</ol>
+			</div>
+			<h2>Design <span class="edit">[<a href="#"> edit </a>]</span></h2>
+			<h3>Exterior design <span class="edit">[<a href="#"> edit </a>]</span></h3>
+
+			<p>The E46 was developed as an evolutionary replacement for the BMW E36 chassis. In 1995, the general exterior design of the E46 by Erik Goplen was approved and as a result DesignworksUSA was contracted by BMW to work alongside BMW Group's in-house design team to create the exterior body work for the 3-Series range in February 1996.Based on the E36 body shell, the design team put an emphasis on improving aerodynamics and increasing the car's aggressive stance.Design patents were filed in Germany on July 16, 1997 and in the US on January 16, 1998.While the styling of the E46 was seen as an evolution of the extremely successful previous generation 3-series, it was not immediately embraced by either the buying public, or the automotive press. Word leaked out in the press that the BMW stylists were unhappy in raising the roof-line, and the general "rounding" of the body panels in comparison to the more squarish E36 series. Chris Bangle was responsible through January 1996 for the production saloon exterior, as evident in the 1997 design patent. Production development of the saloon took 24 months from January 1996 to January 1998. Goplen designed the production coupé and estate during 1996–1997.</p>
+			<h3>Interior design <span class="edit">[<a href="#"> edit </a>]</span></h3>
+			<p>Since the production had started, the entire in-car entertainment system (Radio Function, Navigation System, Television and Telecommunications systems) is based on a very flexible automotive computer system.As a result the E46 models can all be easily upgraded with the newest BMW technologies including BMW's Bluetooth System, the DVD based Navigation system, as well as BMW's CD changers that play MP3s</p>
 		</div>
-	
-
 	</div>
-
-	
-
 </div>
 	
 </body>
