--- a/index.html
+++ b/index.html
@@ -122,19 +122,18 @@
 		<div class="container-text">
 
 			<h4>For a complete overview of all the 3 series chassis, see <a href="#">BMW 3 Series</a>.</h4>
-			<table align="right">
-				<tr>
-					<th style="background-color: #C0C0C0;font-size:20px;">BMW 3-Series (E46)</th>
-				</tr>
-				<tr>
-					<td style="text-align: center;font-size:14px">
-						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG/280px-BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG" alt="bmwE46">Pre-facelift BMW 3 Series (E46) sedan</td>
-				</tr>
-				<tr>
-					<th style="background-color: #C0C0C0;text-align: center;">Overview</th>
-				</tr>
-				<tr>
-				 	<td>Manufacturer</td>
+			<div class="table">
+				<h3>BMW 3-Series(46)</h3>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG/280px-BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG" alt="bmw3">
+				<p>Pre-facelift BMW 3 Series (E46) sedan</p>
+				<h4>Overview</h4>
+				<p style="text-align: left;padding-left: 5px"><strong>Manufacturer</strong> <a href="#">BMW</a></p>
+
+
+
+
+			</div>
+				 	
 
 
 				
