--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 
 <div class="sidebar">
-    <div class="home"<a href="https://en.wikipedia.org/wiki/Main_Page"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png" alt="home"></a>
-    </div>
+    <div class="home"><a href="#"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png"><a></div>
 	<div class="block">
 		<ul>
 			<li><a href="#">Main page</a></li>
@@ -18,6 +17,7 @@
 			<li><a href="#">Random article</a></li>
 			<li><a href="#">Donate to Wikipedia</a></li>
 			<li><a href="#">Wikipedia store</a></li>
+		</ul>
     </div>
 
 	<div class="block">
@@ -127,7 +127,12 @@
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG/280px-BMW_3er_%28E46%2C_1998%E2%80%932001%29_front_MJ.JPG" alt="bmw3">
 				<p>Pre-facelift BMW 3 Series (E46) sedan</p>
 				<h4>Overview</h4>
-				<p style="text-align: left;padding-left: 5px"><strong>Manufacturer</strong> <a href="#">BMW</a></p>
+				<p style="text-align: left;padding-left"><strong>Manufactured</strong> <a href="#">BMW</a></p>
+				<br>
+				<p class="overview"><strong>Production</strong></p>
+				<p class="info">March 1998 - February 2005</p>
+				<p class="info">(sedan)</p>
+				<p class="info">April 1999 - June 2006 (coupe)</p>
 
 
 
