--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a href="#">Donate to Wikipedia</a></li>
 			<li><a href="#">Wikipedia store</a></li>
 		</ul>
+	<div class="iconline"></div>
     </div>
 
 	<div class="block">
@@ -32,13 +33,14 @@
 			</ul>
 		</div>
 	</div>
+	<div class="iconline"></div>
 
 	<div class="block"> 
 		<div class="body">
 		<h4>Tools</h4>
 			<ul>
 				<li><a href="#">What links here</a></li>
-				<li><a href="#">Related Changes</a></li>
+				<li><a href="#">Related changes</a></li>
 				<li><a href="#">Upload file</a></li>
 				<li><a href="#">Special pages</a></li>
 				<li><a href="#">Permanent link</a></li>
@@ -48,6 +50,7 @@
 			</ul>
 		</div>
 	</div>
+	<div class="iconline"></div>
 
 	<div class="block">
 		<div class="body">
@@ -59,6 +62,7 @@
 			</ul>
 		</div> 
 	</div>
+	<div class="iconline"></div>
 
 	<div class="block">
 		<div class="body">
@@ -68,9 +72,11 @@
 			</ul>
 		</div>	
 	</div>
+	<div class="iconline"></div>
 
 	<div class="block">
 		<div class="body">
+		<div class="icontools"></div>
 		<h4>Languages</h4>
 			<ul>
 				<li><a href="#">Bosanski</a></li>
@@ -80,7 +86,10 @@
 				<li><a href="#">Espanol</a></li>
 				<li><a href="#">Italiano</a></li>
 				<li><a href="#">Svenska</a></li>
+			</ul>
 		</div>
+	 </div>
+	 <div class="editlinks">
 	 </div>
 </div>
 
@@ -152,13 +161,15 @@
 			<div class="topic">	
 				<ol>
 					<h4>Contents <span>[<a href="#">hide</a>]</span></h4>
-					<li>Design</li>	
+					<li>Design
 						<ul>
 							<li><span>1.1</span> Exterior design</li>
 							<li><span>1.2</span> Interior design</li>
 							<li><span>1.3</span> Weigth and rigdity goals</li>
 							<li><span>1.4</span> E46/5 hatchback</li>
 						</ul>
+					</li>
+
 					<li>SULEV</li>
 					<li>Specifications</li>
 					<li>Performance package(ZHP)</li>
