--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 	<div class="block">
 		<div class="body">
-		<div class="icontools"></div>
+		<a href="#"><div class="icontools"></div></a>
 		<h4>Languages</h4>
 			<ul>
 				<li><a href="#">Bosanski</a></li>
