Added "editlinks" icon and text.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 		</div>
 	 </div>
 	 <div class="editlinks">
+	 	<a href="#">
+	 		<div class="pen"></div>
+	 		<span>Edit links</span>
+		</a>
 	 </div>
 </div>
 
