Right corner "client"menu fixed,added navigation div including leftnav and rightnav.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</ul>
 		</div>
 	 </div>
-	 <div class="editlinks">
+	 <div class="edit-links">
 	 	<a href="#">
 	 		<div class="pen"></div>
 	 		<span>Edit links</span>
@@ -100,29 +100,29 @@
 <div class="content">
 	<div class="client">
 		<ul>
-			<li><img widht="12" height="13" src="https://en.wikipedia.org/w/skins/Vector/images/user-icon.png?13155" alt="user"></li>
-			<li class="user">Not logged in</li>
+			<li class="login"><span>Not logged in</span></li>
 			<li><a href="#">Talk</a></li>
 			<li><a href="#">Contributions</a></li>
 			<li><a href="#">Create account</a></li>
 			<li><a href="#">Log in</a></li>
 		</ul>
 	</div>
+	<div class="navigation">
+		<div class="leftnav">
+			<ul>
+				<a href ="#"><li class="article">Article</li></a>
+				<a href ="#"><li class="talk">Talk</li></a>
+			</ul>
+		</div>
+		<div class="rightnav">
+			<ul>
+				<a href ="#"><li class="read">Read</li></a>
+				<a href ="#"><li class="edit-nav">Edit</li></a>
+				<a href ="#"><li class="view-history">View history</li></a>
+				<a href ="#"><li class="search"><input type="search" name="googlesearch" size="44" placeholder="Search"></li></a>
+			</ul>
 
-	<div class="leftnav">
-		<ul>
-			<a href ="#"><li>Article</li></a>
-			<a href ="#"><li>Talk</li></a>
-		</ul>
-	</div>
-	<div class="rightnav">
-		<ul>
-			<a href ="#"><li>Read</li></a>
-			<a href ="#"><li>Edit</li></a>
-			<a href ="#"><li>View history</li></a>
-			<a href ="#"><li class="search"><input type="search" name="googlesearch" size="40" placeholder="Search"></li></a>
-		</ul>
-
+		</div>
 	</div>
 	<br>
 	
