Added "subs" in container,gradients added in sidebar "home" and navigation menu buttons.Text spaces fixed,topic fixed,added "search-icon" button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="sidebar">
-    <div class="home"><a href="#"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png"><a></div>
+    <div class="home"><a href="#"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png" style="padding-left: 15px"><a></div>
 	<div class="block">
 		<ul>
 			<li><a href="#">Main page</a></li>
@@ -79,13 +79,22 @@
 		<a href="#"><div class="icontools"></div></a>
 		<h4>Languages</h4>
 			<ul>
+				<li><a href="#">Azerbaycanca</a></li>
 				<li><a href="#">Bosanski</a></li>
-				<li><a href="#">Čeština</a></li>
+				<li><a href="#">&#262e&#353tina</a></li>
 				<li><a href="#">Dansk</a></li>
+				<li><a href="#">Deutsch</a></li>
 				<li><a href="#">Eesti</a></li>
-				<li><a href="#">Espanol</a></li>
+				<li><a href="#">Espa&ntildeol</a></li>
+				<li><a href="#">Euskara</a></li>
+				<li><a href="#">Bahasa Indonesia</a></li>
 				<li><a href="#">Italiano</a></li>
-				<li><a href="#">Svenska</a></li>
+				<li><a href="#">Magyar</a></li>
+				<li><a href="#">Nederlands</a></li>
+				<li><a href="#">Norsk bokm&aringl</a></li>
+				<li><a href="#">Polski</a></li>
+				<li><a href="#">Portugu&ecircs</a></li>
+				<li><a href="#">Suomi</a></li>
 			</ul>
 		</div>
 	 </div>
@@ -119,7 +128,12 @@
 				<a href ="#"><li class="read">Read</li></a>
 				<a href ="#"><li class="edit-nav">Edit</li></a>
 				<a href ="#"><li class="view-history">View history</li></a>
-				<a href ="#"><li class="search"><input type="search" name="googlesearch" size="44" placeholder="Search"></li></a>
+				<a href ="#">
+					<li class="search">
+						<input type="search" name="googlesearch" size="44" placeholder="Search">
+						<input class="searchicon" type="image" src="https://en.wikipedia.org/w/skins/Vector/images/search-ltr.png?39f97" alt="submit">
+					</li>
+				</a>
 			</ul>
 
 		</div>
@@ -128,7 +142,7 @@
 	
 
 	<div class="container">
-		<h1>BMW <sub>3</sub> Series (E46)</h1>
+		<h1>BMW 3 Series (E46)</h1>
 		<h4>From Wikipedia, the free encyclopedia</h4>
 	
 
@@ -157,38 +171,46 @@
 				
 			</table>
 			<p>The <strong>BMW E46</strong> is a <a href="#">compact executive car</a> which was produced by <a href="#">BMW</a> from 1998 to 2007. It was introduced in May 1998 in the <a href="#">sedan</a> body style. In 1999, a <a href="#">coupe</a> and <a href="#">touring</a> body style became available to all markets, and the sedan was released in the United States. A <a href="#">convertible</a> and <a href="#">hatchback</a> body style was released in 2000, the latter only for Europe, South Africa, Australia and New Zealand. The <a href="#">BMW E90</a> replaced<br>the E46 sedans in late 2004, however the E46 coupe and convertible body styles remained in production until 2007.</p>
-			<p>All-wheel drive ("<a href="#">xDrive</a>") was re-introduced in the 3 Series, after a break of 18 years. It was available for the six-cylinder 325xi and 330xi sedan/wagon models.</p>
-			<p>The E46 was considered the performance benchmark of its class and experienced success in many markets. The record selling year for the E46 chassis was 2002, when 561,249 vehicles were sold worldwide.The <br>main competitors during the E46's production run were the <a href="#">Alfa Romeo 156</a>, <a href="#">Audi A4</a>, <a href="#">Lexus IS</a>/<a href="#">Toyota Altezza</a>, <a href="#">Mercedes-Benz C-Class</a>, <a href="#">Saab 9-3</a> and the <a href="#">Volvo S60</a>.</p>
+			<p>All-wheel drive ("<a href="#">xDrive</a>") was re-introduced in the 3 Series, after a break of 18 years. It was available for the six-cylinder 325xi and 330xi sedan/wagon models.<sup>[5]</sup><sup>[6]</sup></p>
+			<p>The E46 was considered the performance benchmark of its class<sup>[7]</sup> and experienced success in many markets. The record selling year for the E46 chassis was 2002, when 561,249 vehicles were sold worldwide.<sup>[8]</sup> The <br>main competitors during the E46's production run were the <a href="#">Alfa Romeo 156</a>, <a href="#">Audi A4</a>, <a href="#">Lexus IS</a>/<a href="#">Toyota Altezza</a>, <a href="#">Mercedes-Benz C-Class</a>, <a href="#">Saab 9-3</a> and the <a href="#">Volvo S60</a>.</p>
 
-			<p>The <a href="#">M3</a> version of the E46 was powered by the <a href="#">BMW S54</a> straight-six engine. The M3 was released in 2001 and was available in coupé and convertible body styles. The transmissions available were a 6-speed manual or the 6-speed "SMG-II" <a href="#">sequential manual gearbox</a>.</p>
+			<p>The <a href="#">M3</a> version of the E46 was powered by the <a href="#">BMW S54</a> straight-six engine. The M3 was released in 2001 and was available in coup&eacute and convertible body styles. The transmissions available were a 6-speed manual or the 6-speed "SMG-II" <a href="#">sequential manual gearbox</a>.</p>
 			<div class="topic">	
-				<ol>
-					<h4>Contents <span>[<a href="#">hide</a>]</span></h4>
-					<li>Design
-						<ul>
-							<li><span>1.1</span> Exterior design</li>
-							<li><span>1.2</span> Interior design</li>
-							<li><span>1.3</span> Weigth and rigdity goals</li>
-							<li><span>1.4</span> E46/5 hatchback</li>
-						</ul>
-					</li>
-
-					<li>SULEV</li>
-					<li>Specifications</li>
-					<li>Performance package(ZHP)</li>
-					<li>M3</li>
-					<li>Motorsport</li>
-					<li>Gallery</li>
-					<li>References</li>
-					<li>External links</li>
-				</ol>
+					<h4>Contents <span> [<a href="#">hide</a>]</span></h4>
+					<ul>
+						<li class="topiclevel1"><span>1</span> Design
+							<ul class="topiclevel1-items">
+								<li><span>1.1</span> Exterior design</li>
+								<li><span>1.2</span> Interior design</li>
+								<li><span>1.3</span> Weight and rigidity goals</li>
+								<li><span>1.4</span> E46/5 hatchback</li>
+							</ul>
+						</li>
+						<li class="topiclevel2"><span>2</span> SULEV</li>
+						<li class="topiclevel3"><span>3</span> Specifications</li>
+						<li class="topiclevel4"><span>4</span> Performance package (ZHP)</li>
+						<li class="topiclevel5"><span>5</span> M3</li>
+						<li class="topiclevel6"><span>6</span> Motorsport</li>
+						<li class="topiclevel7"><span>7</span> Gallery</li>
+						<li class="topiclevel8"><span>8</span> References</li>
+						<li class="topiclevel9"><span>9</span> External links</li>
+					</ul>
 			</div>
 			<h2>Design <span class="edit">[<a href="#"> edit </a>]</span></h2>
 			<h3>Exterior design <span class="edit">[<a href="#"> edit </a>]</span></h3>
 
-			<p>The E46 was developed as an evolutionary replacement for the BMW E36 chassis. In 1995, the general exterior design of the E46 by Erik Goplen was approved and as a result DesignworksUSA was contracted by BMW to work alongside BMW Group's in-house design team to create the exterior body work for the 3-Series range in February 1996.Based on the E36 body shell, the design team put an emphasis on improving aerodynamics and increasing the car's aggressive stance.Design patents were filed in Germany on July 16, 1997 and in the US on January 16, 1998.While the styling of the E46 was seen as an evolution of the extremely successful previous generation 3-series, it was not immediately embraced by either the buying public, or the automotive press. Word leaked out in the press that the BMW stylists were unhappy in raising the roof-line, and the general "rounding" of the body panels in comparison to the more squarish E36 series. Chris Bangle was responsible through January 1996 for the production saloon exterior, as evident in the 1997 design patent. Production development of the saloon took 24 months from January 1996 to January 1998. Goplen designed the production coupé and estate during 1996–1997.</p>
+			<p>The E46 was developed as an evolutionary replacement for the BMW E36 chassis. In 1995, the general exterior design of the E46 by Erik Goplen was approved and as a result <a href="#">DesignworksUSA</a> was contracted by BMW to work alongside BMW Group's in-house design team to create the exterior body work for the 3-Series range in February 1996.<sup>[9]</sup><sup>[10]</sup>Based on the E36 body shell, the design team put an emphasis on improving aerodynamics and increasing the car's aggressive stance.<sup>[9]</sup>Design patents were filed in Germany on July 16, 1997 and in the US on January 16, 1998.<sup>[11]</sup>While the styling of the E46 was seen as an evolution of the extremely successful previous generation 3-series, it was not immediately embraced by either the buying public, or the automotive press. Word leaked out in the press that the BMW stylists were unhappy in raising the roof-line, and the general "rounding" of the body panels in comparison to the more squarish E36 series. Chris Bangle was responsible through January 1996 for the production saloon exterior, as evident in the 1997 design patent. Production development of the saloon took 24 months from January 1996 to January 1998. Goplen designed the production coup&eacute and estate during 1996-1997.<sup>[12]</sup></p>
+
 			<h3>Interior design <span class="edit">[<a href="#"> edit </a>]</span></h3>
-			<p>Since the production had started, the entire in-car entertainment system (Radio Function, Navigation System, Television and Telecommunications systems) is based on a very flexible automotive computer system.As a result the E46 models can all be easily upgraded with the newest BMW technologies including BMW's Bluetooth System, the DVD based Navigation system, as well as BMW's CD changers that play MP3s</p>
+
+			<p>Since the production had started, the entire in-car entertainment system (Radio Function, Navigation System, Television and Telecommunications systems) is based on a very flexible automotive computer system.<sup>[13]</sup>As a result the E46 models can all be easily upgraded with the newest BMW technologies including BMW's Bluetooth System, the DVD based Navigation system, as well as BMW's CD changers that play MP3s<sup>[14]</sup></p>
+
+			<h3>Weight and rigidity goals <span class="edit">[<a href="#"> edit </a>]</span></h3>
+
+			<p>An emphasis was put on reducing <a href="#">unsprung weight</a> and increasing structural rigidity rather than increasing power output: the highest displacement model at release, the E46 328, had only 3 horsepower more than the E36 328.<sup>[15]</sup> To counter this small power increase, the body shell of the E46 was claimed by BMW to be 70% more rigid than the E36's,<sup>[15]</sup> and aluminum suspension components were used increasingly in order to decrease unsprung weight.<sup>[15]</sup> However, with a curb weight of 1450 kg,<sup>[16]</sup><sup>[17]</sup>the E46 328ci is 55 kilograms (121 lb) heavier than the E36 equivalent.<sup>[18]</sup><sup>[19]</sup>
+
+			In tune with BMW's core values,<sup>[20]</sup> the E46 was released with a <a href="#">front engined rear-wheel drive</a> layout with 50/50 weight distribution.<sup>[15]</sup><sup>[21]</sup> This balance allows for optimal handling in regard to the drive train layout.</p>
+
 		</div>
 	</div>
 </div>
