extra classes fixed added background-color to nav. buttons

--- a/index.html
+++ b/index.html
@@ -271,22 +271,22 @@
 			<div class="topic">	
 					<h4>Contents <span> [<a href="#">hide</a>]</span></h4>
 					<ul>
-						<li class="topiclevel1"><span>1</span> Design
+						<li class="topiclevel1"><a href="#"><span>1</span>Design</a>
 							<ul class="topiclevel1-items">
-								<li><span>1.1</span> Exterior design</li>
-								<li><span>1.2</span> Interior design</li>
-								<li><span>1.3</span> Weight and rigidity goals</li>
-								<li><span>1.4</span> E46/5 hatchback</li>
+								<li><a href="#"><span>1.1</span>Exterior design</a></li>
+								<li><a href="#"><span>1.2</span>Interior design</a></li>
+								<li><a href="#"><span>1.3</span>Weight and rigidity goals</a></li>
+								<li><a href="#"><span>1.4</span>E46/5 hatchback</a></li>
 							</ul>
 						</li>
-						<li class="topiclevel2"><span>2</span> SULEV</li>
-						<li class="topiclevel3"><span>3</span> Specifications</li>
-						<li class="topiclevel4"><span>4</span> Performance package (ZHP)</li>
-						<li class="topiclevel5"><span>5</span> M3</li>
-						<li class="topiclevel6"><span>6</span> Motorsport</li>
-						<li class="topiclevel7"><span>7</span> Gallery</li>
-						<li class="topiclevel8"><span>8</span> References</li>
-						<li class="topiclevel9"><span>9</span> External links</li>
+						<li><a href="#"><span>2</span>SULEV</a></li>
+						<li><a href="#"><span>3</span>Specifications</a></li>
+						<li><a href="#"><span>4</span>Performance package (ZHP)</a></li>
+						<li><a href="#"><span>5</span>M3</a></li>
+						<li><a href="#"><span>6</span>Motorsport</a></li>
+						<li><a href="#"><span>7</span>Gallery</a></li>
+						<li><a href="#"><span>8</span>References</a></li>
+						<li><a href="#"><span>9</span>External links</a></li>
 					</ul>
 			</div>
 			<h2>Design <span class="edit">[<a href="#"> edit </a>]</span></h2>
@@ -303,9 +303,14 @@
 			<p>An emphasis was put on reducing <a href="#">unsprung weight</a> and increasing structural rigidity rather than increasing power output: the highest displacement model at release, the E46 328, had only 3 horsepower more than the E36 328.<sup>[15]</sup> To counter this small power increase, the body shell of the E46 was claimed by BMW to be 70% more rigid than the E36's,<sup>[15]</sup> and aluminum suspension components were used increasingly in order to decrease unsprung weight.<sup>[15]</sup> However, with a curb weight of 1450 kg,<sup>[16]</sup><sup>[17]</sup>the E46 328ci is 55 kilograms (121 lb) heavier than the E36 equivalent.<sup>[18]</sup><sup>[19]</sup><br>
 
 			In tune with BMW's core values,<sup>[20]</sup> the E46 was released with a <a href="#">front engined rear-wheel drive</a> layout with 50/50 weight distribution.<sup>[15]</sup><sup>[21]</sup> This balance allows for optimal handling in regard to the drive train layout.</p>
+			
+
 
 		</div>
 	</div>
+</div>
+<div class="footer">
+	This page was last modified on 7 May 2016, at 07:18.
 </div>
 	
 </body>
