--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<link rel="stylesheet" type="text/css" href="mysite.css">
 </head>
 
@@ -128,12 +129,12 @@
 				<a href ="#"><li class="read">Read</li></a>
 				<a href ="#"><li class="edit-nav">Edit</li></a>
 				<a href ="#"><li class="view-history">View history</li></a>
-				<a href ="#">
-					<li class="search">
-						<input type="search" name="googlesearch" size="44" placeholder="Search">
-						<input class="searchicon" type="image" src="https://en.wikipedia.org/w/skins/Vector/images/search-ltr.png?39f97" alt="submit">
+					<li>
+					<div class="search">
+						<input class="input-search"type="search" name="googlesearch" size="44" placeholder="Search">
+						<input class="searchicon" type="submit">
+					</div>
 					</li>
-				</a>
 			</ul>
 
 		</div>
