--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+<div></div>
 <div class="sidebar">
     <div class="home"><a href="#"><img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png" style="padding-left: 15px"><a></div>
 	<div class="block">
